# journal

./: .gitignore  app.json  package-lock.json  package.json  pyproject.toml
android/app/: build.gradle
app/: _layout.tsx  styles.ts
app/(settingsPages)/: CreateUser.tsx  Login.tsx
app/(tabs)/: _layout.tsx  index.tsx  menu.tsx
app/components/: FullWidthButton.tsx  FullWidthTextInput.tsx  TopHeader.tsx
app/entry/: [id].tsx
app/pages/: editor.tsx
app/settings/: CreateUser.tsx
app/styles/: CreateUserStyles.ts  TopHeaderStyles.ts
backend/: .gitignore  pyproject.toml  run.py
backend/.run/: Run Server.run.xml
backend/journal/: app.py  auth.py  database.py  errors.py  models.py  schema.sql  types.py
components/: ContextMenu.tsx  CreateEntryButton.tsx  EntriesView.tsx  Entry.tsx  FullWidthLink.tsx  Html.tsx  TopHeader.tsx
frontend/: app.json  package-lock.json  package.json
frontend/android/: settings.gradle
frontend/app/: _layout.tsx
frontend/components/: ButtonNoBackground.tsx  ContextMenu.tsx  CreateEntryButton.tsx  DateTimeModal.tsx  DaySection.tsx  EntriesView.tsx  Entry.tsx  EntryImage.tsx  FullWidthButton.tsx  FullWidthLink.tsx  FullWidthTextInput.tsx  Html.tsx  MonthHeader.tsx  TopHeader.tsx
frontend/ios/: Podfile
frontend/lib/: dateReviver.ts  parseHtml.ts
journal/: app.py  database.py  datebase.py  errors.py  row_types.py  schema.sql
lib/: createUser.ts  login.ts  parseHtml.ts  resolveEntryTimes.ts
styles/: CreateEntryButtonStyles.ts  EntryEditorStyles.ts  FullWidthLinkStyles.ts  styles.ts
types/: EntryType.ts
(+94 files in other folders)
